--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: #14161E !important; 
+}
+
+a{
+    text-decoration: none;
+}
+
+h1,h2,h3,h4,h5 {
+    font-weight: 200 !important;
+    color: white !important;
+}
+
+p {
+    color: white !important;
+}
+
+hr{
+    color: white !important;
+}
+
+.navbar-brand {
+    font-weight: 200;
+    color: #bd4c5f !important;
+}
+
+.btn-outline-danger {
+    border-color: #bd4c5f !important;
+    color: #bd4c5f !important;
+}
+
+.btn-outline-danger:hover {
+    background-color: #272a36;
+    color: white !important;
+}
+
+.block {
+    display:block;
+}
+
+textarea:focus, 
+textarea.form-control:focus, 
+input.form-control:focus, 
+input[type=text]:focus, 
+input[type=password]:focus, 
+input[type=email]:focus, 
+input[type=number]:focus, 
+[type=text].form-control:focus, 
+[type=password].form-control:focus, 
+[type=email].form-control:focus, 
+[type=tel].form-control:focus, 
+[contenteditable].form-control:focus {
+  box-shadow: inset 0 -1px 0 #ddd;
+}
