--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12">
-        <app-slideshow></app-slideshow>
+    <div class="col-12" *ngIf="movies.length > 0">
+        <app-slideshow [movies]="movies"></app-slideshow>
     </div>
 </div>
