poster-grid non infinte scroll

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,10 @@
+<h3 class="mb-3">New releases</h3>
 <div class="row">
     <div class="col-12" *ngIf="movies.length > 0">
         <app-slideshow [movies]="movies"></app-slideshow>
     </div>
 </div>
+<h3 class="mt-5 mb-3">Movies</h3>
+<ng-container *ngIf="movies.length > 0">
+    <app-movies-poster-grid [movies]="movies"></app-movies-poster-grid>
+</ng-container>
