infinite scroll working

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <h3 class="mb-3">New releases</h3>
 <div class="row">
     <div class="col-12" *ngIf="movies.length > 0">
-        <app-slideshow [movies]="movies"></app-slideshow>
+        <app-slideshow [movies]="slideShow"></app-slideshow>
     </div>
 </div>
 <h3 class="mt-5 mb-3">Movies</h3>
