--- a/src/app/components/movies-poster-grid/movies-poster-grid.component.html
+++ b/src/app/components/movies-poster-grid/movies-poster-grid.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12 col-sm-6 col-md-3 mb-5" *ngFor="let movie of movies">
-        <img src="https://image.tmdb.org/t/p/original/{{movie.poster_path}}" 
+        <img [src]="movie.poster_path | poster" 
              alt=""
              class="img-fluid rounded poster mb-1"
         >
