--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,10 +3,20 @@
 
     <a class="navbar-brand" routerLink="/home"><i class="fas fa-ticket-alt"></i> MovieApp</a>
 
-    <form class="d-flex w-100" autocomplete="off">
-        <input class="form-control me-2" type="search" placeholder="Search movie" aria-label="Search movie" id="search">
-        <button class="btn btn-outline-danger" type="button"><i class="fas fa-search"></i></button>
-    </form>
+    <div class="d-flex w-100" autocomplete="off">
+        <input class="form-control me-2" 
+               #searchInput
+               (keyup.enter)="searchMovies(searchInput.value)"
+               type="search" 
+               placeholder="Search movie" 
+               aria-label="Search movie" 
+               id="search"
+        >
+        <button (click)="searchMovies(searchInput.value)"
+                class="btn btn-outline-danger" 
+                type="button"
+        ><i class="fas fa-search"></i></button>
+    </div>
 
     </div>
 </nav>
