--- a/src/app/components/movies-poster-grid/movies-poster-grid.component.html
+++ b/src/app/components/movies-poster-grid/movies-poster-grid.component.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-12 col-sm-6 col-md-3 mb-5" *ngFor="let movie of movies">
         <img [src]="movie.poster_path | poster" 
-             alt=""
-             class="img-fluid rounded poster mb-1"
+             [alt]="movie.title"
+             [routerLink]="['/movie', movie.id]"
+             class="img-fluid rounded poster mb-1 pointer"
         >
         <h4 class="text-white">{{movie.title}}</h4>
         <div class="row">
