--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,1 +1,42 @@
-<p>movie works!</p>
+<div class="row" *ngIf="movie">
+    <div class="col-sm-6 col-md-4 col-lg-3 mb-2">
+        <picture>
+            <img [src]="movie.poster_path | poster" 
+                 [alt]="movie.title + 'poster'"
+                 class="img-fluid rounded mb-3"
+            >
+        </picture>
+        <div class="mb-3" *ngIf="movie.homepage">
+            <h4 class="mb-2">Homepage</h4>
+            <a [href]="movie.homepage" target="_blank" class="btn w-100"><i class="fas fa-link"></i> Take me to the homepage</a>
+        </div>
+        <div class="mb-3" *ngIf="movie.genres.length > 0">
+            <h4 class="mb-2">Genres</h4>
+            <span class="badge rounded-pill me-2 mb-1" *ngFor="let genre of movie.genres | slice:0:3">{{genre.name}}</span> 
+        </div>
+        <div class="me-3" *ngIf="movie.production_companies.length > 0">
+            <h4 class="mb-2">Production companies</h4>
+            <span class="badge rounded-pill me-2 mb-1" *ngFor="let companie of movie.production_companies | slice:0:3">{{companie.name}}</span> 
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-8 col-lg-9 mb-2">
+        <h3>{{movie.title}}</h3>
+        <h5>{{movie.tagline}}</h5>
+        <div>
+            <small class="text-muted">{{movie.release_date}}</small>
+        </div>
+        <star-rating [value]="movie.vote_average" 
+                [totalstars]="10" 
+                checkedcolor="#bd4c5f" 
+                uncheckedcolor="grey" 
+                size="20px" 
+                [readonly]="true"
+        ></star-rating>
+        <p>
+            {{movie.overview}}
+        </p>
+        <div>
+            <button class="btn w-50" (click)="goBack();">Go back</button>
+        </div>
+    </div>
+</div>
