--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -38,5 +38,12 @@
         <div>
             <button class="btn w-50" (click)="goBack();">Go back</button>
         </div>
+        <div class="row mt-5" *ngIf="cast.length > 0">
+            <div class="col-12">
+                <hr>
+                <h4 class="mb-2">Movie cast</h4>
+                <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
+            </div>
+        </div>
     </div>
 </div>
