--- a/src/app/components/movies-poster-grid/movies-poster-grid.component.html
+++ b/src/app/components/movies-poster-grid/movies-poster-grid.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-12 col-sm-6 col-md-3 mb-5" *ngFor="let movie of movies">
+<div class="row ">
+    <div class="col-12 col-sm-6 col-md-3 mb-5 animate__animated animate__fadeIn animate__fast" *ngFor="let movie of movies">
         <img [src]="movie.poster_path | poster" 
              [alt]="movie.title"
              [routerLink]="['/movie', movie.id]"
