--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
-<h3 class="mb-3">New releases</h3>
-<div class="row">
+<h3 class="mb-3 animate__animated animate__fadeIn animate__fast">New releases</h3>
+<div class="row animate__animated animate__fadeIn animate__fast">
     <div class="col-12" *ngIf="movies.length > 0">
         <app-slideshow [movies]="slideShow"></app-slideshow>
     </div>
 </div>
-<h3 class="mt-5 mb-3">Movies</h3>
+<h3 class="mt-5 mb-3 animate__animated animate__fadeIn animate__fast">Movies</h3>
 <ng-container *ngIf="movies.length > 0">
     <app-movies-poster-grid [movies]="movies"></app-movies-poster-grid>
 </ng-container>
