--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="movie">
+<div class="row animate__animated animate__fadeIn animate__fast" *ngIf="movie">
     <div class="col-sm-6 col-md-4 col-lg-3 mb-2">
         <picture>
             <img [src]="movie.poster_path | poster" 
