--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -41,7 +41,7 @@
         <div class="row mt-5" *ngIf="cast.length > 0">
             <div class="col-12">
                 <hr>
-                <h4 class="mb-2">Movie cast</h4>
+                <h4 class="mb-2 animate__animated animate__headShake animate__repeat-3">Movie cast</h4>
                 <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
             </div>
         </div>
