changes to slideshow, just most relevant movies (3)

--- a/src/app/components/slideshow/slideshow.component.html
+++ b/src/app/components/slideshow/slideshow.component.html
@@ -4,7 +4,7 @@
     <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide" 
-           *ngFor="let movie of movies"
+           *ngFor="let movie of movies | slice:0:3"
            [ngStyle]="{
                'background-size' : 'cover',
                'background-position' : 'center',
